<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cnstLytMainALWE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/_16sdp"

            >

            <TextView
                android:id="@+id/tvWlcmTtl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_130sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/welcome_to_ttl"
                android:textColor="@color/black"
                android:textSize="@dimen/_22ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvSignInWithTtl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/sign_in_with_email_ttl"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWlcmTtl" />


            <EditText
                android:id="@+id/edtTvEmailALWE"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/edit_txt_courner_bg"
                android:hint="@string/your_email_ttl"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSignInWithTtl" />

            <RelativeLayout
                android:id="@+id/rlPasswrdAL"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/edit_txt_courner_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTvEmailALWE">

                <EditText
                    android:id="@+id/edtTvPassWrdALWE"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_toStartOf="@+id/imgPassWrdShHdALWE"
                    android:background="@null"
                    android:hint="@string/password_ttl"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textSize="@dimen/_13ssp" />

                <ImageView
                    android:onClick="passwordOnOffClick"
                    android:id="@+id/imgPassWrdShHdALWE"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_5sdp" />
            </RelativeLayout>



            <TextView
                android:onClick="loginClick"
                android:id="@+id/tvSignInALWE"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/button_rounded_app_bg"
                android:gravity="center"
                android:text="@string/login_ttl"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rlPasswrdAL" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>